# thesis-python-service

./: .env.example  .gitignore  README.md  docker-compose.yml  generate_faq.py  main.py  main_explainer_and_quiz_generate.py  main_generate_quiz.py  main_lecture_full_test.py  pyproject.toml  requirements.txt  worker_rabbit.py
app/: logging_config.py  main.py
app/api/core/: config.py
app/curriculum/: __init__.py  models.py  rpd_parser.py  selectors.py  store.py
app/documents/: __init__.py  chunking.py  docx_reader.py  index_cache.py  models.py  pdf_reader.py
app/documents/indexers/: __init__.py  base.py  embeddings_index.py  hybrid_index.py  tfidf_index.py
app/faq/: __init__.py  config.py  generator.py  models.py
app/lectures/: __init__.py  context_policy.py  context_selection.py  generator.py  models.py  planner.py
app/quiz/: checker.py  config.py  explainer.py  generator.py  helpers.py  markdown_cleaner.py  models.py  parser.py  rag.py  saver.py
app/quiz/contracts/: adapters.py  builders.py  converters.py  models.py
app/quiz/generation/: __init__.py  config.py  llm_parser.py  prompts.py  service.py
app/services/: cached_embedding_client.py  contracts.py  embeddings_client.py  postgres.py  proxy_client.py  quiz_answer_dialog_summary_cache.py  rabbitmq.py  rabbitmq_async.py  s3_client.py  similarity.py  tasks_processor.py  worker_rabbit_async.py
app/utils/: json_store.py  md_to_pdf.py  pdf_utils.py
app/v1/: router.py  schemas.py
docker/: Dockerfile
files_materials/_s3_cache/: index.json
