[project]
name = "thesis-python-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg==0.31.0",
    "fastapi==0.124.0",
    "httpx==0.28.1",
    "minio==7.2.20",
    "numpy==2.3.5",
    "openai==2.9.0",
    "pika==1.3.2",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pypdf2==3.0.1",
    "pytest==8.3.3",
    "python-docx==1.2.0",
    "python-dotenv==1.2.1",
    "respx==0.21.1",
    "scikit-learn==1.7.2",
    "tabulate==0.9.0",
]
